# bosu

./: .gitignore  Cargo.toml  README.md
src/: main.rs  settings  settings_editor.rs
src/icons/: index.theme
