[package]
name = "bosu"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_4"] }
chrono = "0.4.44"
gtk = { version = "0.11.3", package = "gtk4", features = ["v4_12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
